[package]
name = "greeting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
sha3 = "0.8.2"
hmac = "0.7.1"
rand = "0.8.5"
base64 = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

[dependencies.redis]
version = "*"

[dependencies.mongodb]
version = "2.3.1"
features = ["tokio-sync"]
