[package]
name = "greeting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
sha3 = "0.10.6"
hmac = "0.12.1"
rand = "0.8.5"
base64 = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
petgraph = "0.6.2"
lazy_static = "1.4.0"
probability = "0.20.3"
tiny-keccak = { version = "2.0.0", features = ["kmac"] }

[dependencies.redis]
version = "*"

[dependencies.mongodb]
version = "2.3.1"
features = ["tokio-sync"]
